Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-7075

ScrollBar class captures the mouse and doesn't release it

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • TRUNK
    • None
    • None

    Description

      I'm attaching a Testcase.
      Basically it creates an Overlapped window which contains a ScrollBar control class child.
      To reproduce the bug:
      1)Launch the .exe
      2)Left click on the scroll bar region
      3)Mouse gets captured
      4)Try to move the window. It won't move
      5)Try to click outside the window(i.e, pushing the "Start" menu button). It won't work neither.
      6)The only way that seems to release the mouse is by:
      ----Right clicking in any place of the screen(not just in the Window area).
      ----Pressing CTRL
      ----Pressing Alt

      Attachments

        Activity

          People

            jimtabor jimtabor
            vicmarcal vicmarcal
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: