[User32] - Release capture if the scroll is not tracking events. This fixes CORE-7075. - Minor sync porting to minimize differences.

svn path=/trunk/; revision=59201